--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-switch": "^7.0.0",
+    "react-to-pdf": "^0.0.14",
     "slick-carousel": "^1.8.1",
     "swiper": "^9.1.1",
     "web-vitals": "^2.1.4"
